tests/valid/test_array_26.wyal
assert:
  forall (int[] xs):
    if:
        |xs| > 0
    then:
        exists(int i, int v):
            xs[i] == v
